// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/switch/demo/basic.md correctly 1`] = `
<button
  aria-checked="true"
  class="ant-switch ant-switch-checked"
  role="switch"
  type="button"
>
  <span
    class="ant-switch-inner"
  />
</button>
`;

exports[`renders ./components/switch/demo/disabled.md correctly 1`] = `
<div>
  <button
    aria-checked="true"
    class="ant-switch ant-switch-checked ant-switch-disabled"
    disabled=""
    role="switch"
    type="button"
  >
    <span
      class="ant-switch-inner"
    />
  </button>
  <br />
  <button
    class="ant-btn ant-btn-primary"
    type="button"
  >
    <span>
      Toggle disabled
    </span>
  </button>
</div>
`;

exports[`renders ./components/switch/demo/loading.md correctly 1`] = `
<div>
  <button
    aria-checked="true"
    class="ant-switch-loading ant-switch ant-switch-checked ant-switch-disabled"
    disabled=""
    role="switch"
    type="button"
  >
    <i
      aria-label="icon: loading"
      class="anticon anticon-loading ant-switch-loading-icon"
    >
      <svg
        aria-hidden="true"
        class="anticon-spin"
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#loading"
        />
      </svg>
    </i>
    <span
      class="ant-switch-inner"
    />
  </button>
  <br />
  <button
    aria-checked="false"
    class="ant-switch-small ant-switch-loading ant-switch ant-switch-disabled"
    disabled=""
    role="switch"
    type="button"
  >
    <i
      aria-label="icon: loading"
      class="anticon anticon-loading ant-switch-loading-icon"
    >
      <svg
        aria-hidden="true"
        class="anticon-spin"
        fill="currentColor"
        focusable="false"
        height="1em"
        width="1em"
      >
        <use
          href="#loading"
        />
      </svg>
    </i>
    <span
      class="ant-switch-inner"
    />
  </button>
</div>
`;

exports[`renders ./components/switch/demo/size.md correctly 1`] = `
<div>
  <button
    aria-checked="true"
    class="ant-switch ant-switch-checked"
    role="switch"
    type="button"
  >
    <span
      class="ant-switch-inner"
    />
  </button>
  <br />
  <button
    aria-checked="true"
    class="ant-switch-small ant-switch ant-switch-checked"
    role="switch"
    type="button"
  >
    <span
      class="ant-switch-inner"
    />
  </button>
</div>
`;

exports[`renders ./components/switch/demo/text.md correctly 1`] = `
<div>
  <button
    aria-checked="true"
    class="ant-switch ant-switch-checked"
    role="switch"
    type="button"
  >
    <span
      class="ant-switch-inner"
    >
      开
    </span>
  </button>
  <br />
  <button
    aria-checked="false"
    class="ant-switch"
    role="switch"
    type="button"
  >
    <span
      class="ant-switch-inner"
    >
      0
    </span>
  </button>
  <br />
  <button
    aria-checked="true"
    class="ant-switch ant-switch-checked"
    role="switch"
    type="button"
  >
    <span
      class="ant-switch-inner"
    >
      <i
        aria-label="icon: check"
        class="anticon anticon-check"
      >
        <svg
          aria-hidden="true"
          class=""
          fill="currentColor"
          focusable="false"
          height="1em"
          width="1em"
        >
          <use
            href="#check"
          />
        </svg>
      </i>
    </span>
  </button>
</div>
`;
